changed tailwind config to v4, fixed navbar to have dark mode applied

--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -5,23 +5,13 @@
   --foreground: #171717;
 }
 
-@theme inline {
+@theme {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
 html.dark {
   --background: #00061a;
-  --foreground: #d2d7ff;
+  --foreground: #d7d7d7;
 }
 
 html.light {
